syntax = "proto3";

package _api;

service UserSend{
    rpc Add(SendRequest) returns (SendResponse) {}
}

message SendRequest{
    bytes senderPublicKey = 1;
    bytes recieverAdress = 2;
    bytes sign = 3;
    uint64 amount = 4;
}

message SendResponse{
    bool passed = 1;
}